2009-12-10  Matevz Tadel  <matevz.tadel@ijs.si>

	Fix problem with resizing of Pupils.

	* Pupils/Pupil.cxx:
	* Pupils/Pupil.h:
	After receiving a PRQN_redraw ray manually call draw(). This
	prevents a lock-up in tringula demo when the window is made
	smaller with the window-manager controls.
	This is uber weird.

	Change inheritance order -- make Fl_Gl_Window the primary base.

2009-11-29  Matevz Tadel  <matevz.tadel@ijs.si>

	Stop detached threads during Saturn shutdown.

	* Ephra/Saturn.cxx:
	* Ephra/Saturn.h:
	Add protected method stop_detached_threads().
	Call it during Saturn shut-down.

2009-11-28  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/ZGlass.cxx:
	* Glasses/ZGlass.h:
	Add MC_IsDetached bit to MirComponents_e and handle it in
	assert_MIR_presence().

	* Glasses/PupilInfo.cxx:
	Rewrite ToPupilFrame(ZNode*) to use a set of top-level nodes and
	check it when going up following the parent links.

	* Pupils/Pupil.cxx:
	Do not hold the PupilInfo read-lock throughout SetAbsRelCamera().
	Beautify it.

	Remove double RQN_link_change check in AbsorbRay().
	Beautify it.

2009-11-27  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/PupilInfo.cxx:
	* Glasses/PupilInfo.h:
	Add function:
	  Bool_t TransformMouseRayVectors(ZNode* ref, TVector3& pos, TVector3& dir)
	that transforms mouse-ray vectors into given frame.

	Add data-members Int_t mMouseDragDX, mMouseDragDY.

	* Rnr/GL/GLRnrDriver.cxx:
	* Rnr/GL/GLRnrDriver.h:
	* Rnr/GL/PupilInfo_GL_Rnr.cxx:
	Rename data-members mMDrgDX/Y to mMDragDX/Y;

2009-11-21  Matevz Tadel  <matevz.tadel@ijs.si>

	Extensions for incarnation of proto Spiritios.

	* Eye/OptoStructs.cxx:
	* Eye/OptoStructs.h:
	Add function ZGlassImg::DumpLinkData() to simplify debugging of
	registered link data.

	* Glasses/PupilInfo.cxx:
	* Glasses/PupilInfo.h:
	Use L{f} pragma for links mOverlay and mEventHandler. Thus
	sub-classes can restrict the FID of assigned lenses.

	Add local members holding last-render (cam-fix-trans, true window